--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@
 *.exe
 *.out
 *.app
+
+# Because we are using CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
