Found out lodepng was slow, ready to switch

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ cmake_install.cmake
 install_manifest.txt
 CTestTestfile.cmake
 
-# Sublime-specific
+# Sublime Text files
 *.sublime-project
 *.sublime-workspace
+
+# VSCode files
+.vscode
