--- a/image_processing/CMakeLists.txt
+++ b/image_processing/CMakeLists.txt
@@ -1,6 +1,15 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (ImageProcessing)
- 
-set(SOURCES ./image_processor.cpp ./lodepng.cpp)
 
-add_executable(image_processor ${SOURCES})
+# Compile options for speed with auto-vectorization
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -march=native -mtune=native -O3")
+# Compile options for speed with auto-vectorization + vectorizer output
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -march=native -mtune=native -O3 -fopt-info-vec-optimized")
+# Compile options for speed WITHOUT auto-vectorization
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -march=native -mtune=native -O3 -fno-tree-vectorize")
+ 
+set(SOURCES1 ./image_processor.cpp ./lodepng.cpp ./lodepng.h)
+add_executable(image_processor ${SOURCES1})
+
+set(SOURCES2 ./image_processor2.cpp ./stb_image.h ./stb_image_write.h)
+add_executable(image_processor2 ${SOURCES2})
