--- a/image_processor/CMakeLists.txt
+++ b/image_processor/CMakeLists.txt
@@ -1,9 +1,20 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (ImageProcessor)
 
+if(PROFILE)
+	set(CMAKE_BUILD_TYPE Release)
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -pg")
+	message(STATUS "Building with profiling settings")
+endif(PROFILE)
+
 if(NOT CMAKE_BUILD_TYPE) 
     set(CMAKE_BUILD_TYPE Release)
 endif(NOT CMAKE_BUILD_TYPE)
+
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS}")
+endif()
 
 # Compile options for speed with auto-vectorization
 # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -march=native -mtune=native -O3")
